--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -482,3 +482,4 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
+<app-navbar></app-navbar>
