CREATE routing in navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,5 +23,6 @@
       <span>catalogoMarvel</span>
     </mat-toolbar>
     <!-- Add Content Here -->
+    <router-outlet> </router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
