--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>catalogoMarvel</span>
+      <span>Catalogo de Heróis da Marvel</span>
     </mat-toolbar>
     <!-- Add Content Here -->
     <router-outlet></router-outlet>
