UPDATE characters component layout

--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,8 +1,18 @@
-<p *ngFor="let character of allCharacters">
-  {{ character.id }}
-  {{character.name}}
-  {{ character.description }}
-  <a href="{{character.urls[0].url}}" target="blank"fxFlex mat-flat-button color="primary">
-    Detalhes
-  </a>
-</p>
+<div fxFlex fxLayout="column">
+  <div fxLayout="row wrap">
+    <div fxFlex="25" fxFlex.xs="100" fxFle.sm="50" fxFlex.md="33" *ngFor="let character of allCharacters">
+      <mat-card>
+        <img mat-card-image src={{character.thumbnail.path}}.{{character.thumbnail.extension}} alt="{{character.name}}">
+        {{ character.id }}
+        <mat-card-title>
+          {{ character.name }}
+        </mat-card-title>
+      </mat-card>
+      <mat-card>
+        <a href="{{character.urls[0].url}}" target="blank"fxFlex mat-flat-button color="primary">
+          Detalhes
+        </a>
+      </mat-card>
+    </div>
+  </div>
+</div>
