UPDATE character card title with href

--- a/src/app/characters/character/character.component.html
+++ b/src/app/characters/character/character.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <img mat-card-image src={{character.thumbnail.path}}.{{character.thumbnail.extension}} alt="{{character.name}}">
   <mat-card-title>
-    {{ character.name }}
+    <a href="{{character.urls[0].url}}" target="blank" style="text-decoration: none">
+      {{ character.name }}
+    </a>
   </mat-card-title>
 </mat-card>
 <mat-card>
