--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,9 +5,8 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar color="primary">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a mat-list-item href="#" [routerLink]="['/characters/']">Personagens</a>
+      <a mat-list-item href="#" [routerLink]="['/comics/']">Quadrinhos</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
