UPDATE title style in character component

--- a/src/app/characters/character/character.component.html
+++ b/src/app/characters/character/character.component.html
@@ -3,7 +3,7 @@
     <img mat-card-image src={{character.thumbnail.path}}.{{character.thumbnail.extension}} alt="{{character.name}}">
   </a>
   <mat-card-title>
-    {{ character.name }}
+    <h2 mat-card-title>{{ character.name }}</h2>
   </mat-card-title>
 </mat-card>
 <mat-card>
