--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,4 +1,5 @@
 <div fxFlex fxLayout="column">
+  <app-search></app-search>
   <div fxLayout="row wrap">
     <div class="FlexCard" fxFlex="25" fxFlex.xs="100" fxFlex.md="25" fxFle.sm="50" *ngFor="let character of allCharacters">
         <app-character [character]="character"></app-character>
